k8s/gotodo-be-deploy.yaml
apiVersion: v1
kind: Service
metadata: 
  name: gotodo-backend-svc
  namespace: gotodo-app
  labels:
    app: gotodo-app
    tier: gotodo-backend
spec:
  selector:
    tier: gotodo-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotodo-app
    tier: gotodo-backend
  name: gotodo-backend
  namespace: gotodo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: gotodo-backend
  template:
    metadata:
      labels:
        app: gotodo-app
        tier: gotodo-backend
    spec:
      containers:
      - image: chunliu.azurecr.io/gotodoimg-be:v0.4
        name: gotodo-be-cnt
        ports:
        - containerPort: 8080
        resources: {}
