k8s/k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotodo-svc
  labels:
    app: gotodo-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: gotodo-app
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: gotodo-app
spec:
  selector:
    matchLabels:
      app: gotodo-app
  replicas: 1 
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: gotodo-app
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: nginxsecret
      containers:
      - name: gotodo-ctn
        image: chunliu/gotodoimg:v0.3.7
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
