k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotodo-svc
  labels:
    app: gotodo-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: gotodo-app
