k8s/gotodo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gotodo-ingress-frontend
  namespace: gotodo-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
  - http:
      paths:
        - backend:
            serviceName: gotodo-frontend-svc
            servicePort: 80
          path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gotodo-ingress-backend
  namespace: gotodo-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /todo
spec:
  rules: 
  - http:
      paths:
        - backend:
            serviceName: gotodo-backend-svc
            servicePort: 80
          path: /todo
